force-app/main/default/objects/numm__Schema_ecriture_analytique__c/numm__Schema_ecriture_analytique__c.object-meta.xml
<CustomObject>
    <label>Schéma d&#39;écriture analytique</label>
    <nameField>
        <displayFormat>SEA-{00000}</displayFormat>
        <label>Schéma d&#39;écriture analytique</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schémas d&#39;écritures analytiques</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>