force-app/main/default/objects/numm__Schema_ecriture_analytique__c/fields/numm__Analytic_10__c.field-meta.xml
<CustomField>
    <fullName>numm__Analytic_10__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Analytique 10</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__CostAccountingValues__c.numm__IdAxis__r.numm__RelatedAnalytics__c</field>
            <operation>equals</operation>
            <value>Analytique 10</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>numm__CostAccountingValues__c</referenceTo>
    <relationshipLabel>Schémas d&#39;écritures analytiques (Analytique 10)</relationshipLabel>
    <relationshipName>Schemas_ecritures_analytiques_10</relationshipName>
    <type>Lookup</type>
</CustomField>