force-app/main/default/objects/numm__Schema_ecriture_analytique__c/fields/numm__Schema_ecriture_generale__c.field-meta.xml
<CustomField>
    <fullName>numm__Schema_ecriture_generale__c</fullName>
    <label>Schéma d&#39;écriture générale</label>
    <referenceTo>numm__Schema_ecriture_generale__c</referenceTo>
    <relationshipLabel>Schémas d&#39;écritures analytiques</relationshipLabel>
    <relationshipName>Schemas_ecritures_analytiques</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>