force-app/main/default/objects/numm__Schema_ecriture_analytique__c/fields/numm__Taux_repartition__c.field-meta.xml
<CustomField>
    <fullName>numm__Taux_repartition__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Taux de répartition</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>